--- a/Style.css
+++ b/Style.css
@@ -24,6 +24,7 @@ body{
 }
 .icons .i1{
    background-color: #6fb5f1;
+  /* margin-left: 20px; */
   font-size: 18px;
   color:black
 }
@@ -50,6 +51,7 @@ body{
 }
 .nav .menu{
     display: flex;
+    /* padding-left: 100px; */
     justify-content: space-between;
     gap:30px;
     padding-right: 50px;
@@ -58,6 +60,7 @@ body{
   font-family: "Oleo Script", system-ui;
   font-weight: 700;
   font-style: normal;
+  
 }
 .hamburger{
     display: none;
@@ -65,23 +68,25 @@ body{
 .sidebar{
     position: fixed;
     top: 0px;
-    right: -250px;   /* moved to right */
-    width: 200px;
+    left: -250px;
+    width: 10%;
     border: 1px solid #98caf5;
     display: none;
     background-color: rgb(178, 221, 238);
     z-index: 1;
-    transition: right 0.3s ease;
-}
-.sidebar.active {
-    right: 0;   /* visible when active */
 }
 .sidebar .a{
+    /* width: 100%; */
     text-align: center;
     color:#014e7b
+    /* border: 1px solid #98caf5; */
+    /* border: 1px solid rgb(105, 211, 253); */
+    /* padding-bottom: 10px;
+    padding-top: 10px; */
 }
 .close{
-    float: left;   /* since menu is on right, cross should float left */
+    /* padding-left:50px; */
+    float: right;
     font-size: 30px;
     color:rgb(14, 179, 244);
 }
@@ -103,6 +108,7 @@ body{
     height: 500px;
 }
 .h .data{
+    /* padding-top: 150px; */
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -114,6 +120,7 @@ body{
     text-align: justify;
 }
 .h .im{
+    /* background-color: rgb(2, 22, 22); */
     float: left;
     height:100%;
     display: flex;
@@ -165,19 +172,22 @@ body{
 .displayskills .line{
     width: 0px;
     height: 200px;
-    display: none;
+    /* border: 1px solid black; */
 }
+
 .line {
     position: relative;
     width: 0px;
     height: 200px;
     display: none;
+    /* border: 1px solid black; */
 }
 .line1 {
     position: relative;
     width: 0px;
     height: 100px;
     display: none;
+    /* border: 1px solid black; */
 }
 .s1 button{
     border-radius: 20px;
@@ -194,6 +204,11 @@ body{
 .d p,.d1 p{
     margin-left: -50px;
 }
+
+/* .d1 p{
+    padding-top: 50px;
+    margin-left: -50px;
+} */
 .line1 .dot{
      position: absolute;
     left: 50%;
@@ -231,6 +246,7 @@ body{
 .line:nth-child(2)::before {
     top: 30px;
 }
+
 .line:nth-child(1)::after,
 .line:nth-child(2)::after {
     top: 140px;
@@ -241,7 +257,7 @@ body{
 .d p, .d1 p {
   display: flex;
   align-items: center;
-  gap: 8px;
+  gap: 8px; /* space between icon and text */
 }
 .d1 i , .d i{
     font-size: 25px;
@@ -272,7 +288,12 @@ button a{
     grid-template-rows: 1fr ;
     grid-template-columns: 1fr 1fr;
 }
-.image2 img,
+
+.image2 img{
+    padding-left: 25px;
+    width: 80%;
+    height: 300px;
+}
 .image1 img{
     padding-left: 25px;
     width: 80%;
@@ -302,6 +323,7 @@ button a{
 .btn button{
     margin-left: 50px;
 }
+/* From Uiverse.io by KINGFRESS */ 
 .btn button {
   font-weight: bold;
   color: white;
@@ -315,71 +337,91 @@ button a{
   justify-content: center;
   align-items: center;
 }
+
 .btn button  .span-mother {
   display: flex;
   overflow: hidden;
 }
+
 .btn button:hover .span-mother {
   position: absolute;
 }
+
 .btn button:hover .span-mother span {
   transform: translateY(1.2em);
 }
+
 .btn button  .span-mother span:nth-child(1) {
   transition: 0.2s;
 }
+
 .btn button  .span-mother span:nth-child(2) {
   transition: 0.3s;
 }
+
 .btn button  .span-mother span:nth-child(3) {
   transition: 0.4s;
 }
+
 .btn button  .span-mother span:nth-child(4) {
   transition: 0.5s;
 }
+
 .btn button  .span-mother span:nth-child(5) {
   transition: 0.6s;
 }
+
 .btn button  .span-mother span:nth-child(6) {
   transition: 0.7s;
 }
+
 .btn button  .span-mother2 {
   display: flex;
   position: absolute;
   overflow: hidden;
 }
+
 .btn button  .span-mother2 span {
   transform: translateY(-1.2em);
 }
+
 .btn button:hover .span-mother2 span {
   transform: translateY(0);
 }
+
 .btn button  .span-mother2 span {
   transition: 0.2s;
 }
+
 .btn button  .span-mother2 span:nth-child(2) {
   transition: 0.3s;
 }
+
 .btn button  .span-mother2 span:nth-child(3) {
   transition: 0.4s;
 }
+
 .btn button  .span-mother2 span:nth-child(4) {
   transition: 0.5s;
 }
+
 .btn button  .span-mother2 span:nth-child(5) {
   transition: 0.6s;
 }
+
 .btn button .span-mother2 span:nth-child(6) {
   transition: 0.7s;
 }
 .content2{
     margin-left: -100px;
 }
+/* Scroll animation for all sections */
 section, .h, .skillset, .projects, .cert-container, .contact {
   opacity: 0;
   transform: translateY(80px);
   transition: all 0.8s ease-out;
 }
+
 section.visible, 
 .h.visible, 
 .skillset.visible, 
@@ -389,6 +431,7 @@ section.visible,
   opacity: 1;
   transform: translateY(0);
 }
+
 .project2{
     margin-top: 50px;
     margin-bottom: 20px;
@@ -401,6 +444,7 @@ section.visible,
   flex-wrap: wrap;
   gap: 20px;
 }
+
 .cert-card {
   width: 300px;
   height: 200px;
@@ -408,6 +452,7 @@ section.visible,
   padding-left: 80px;
   padding-top: 50px;
 }
+
 .cert-card .front, 
 .cert-card .back {
   width: 300px;
@@ -418,12 +463,14 @@ section.visible,
   box-shadow: 0 5px 15px rgba(0,0,0,0.2);
   transition: transform 0.6s;
 }
+
 .cert-card .front img {
   width: 300px;
   height: 200px;
   border-radius: 12px;
   object-fit: cover;
 }
+
 .cert-card .back {
   background: #014e7b;
   color: white;
@@ -431,12 +478,21 @@ section.visible,
   text-align: center;
   transform: rotateY(180deg);
 }
+
 .cert-card:hover .front {
   transform: rotateY(180deg);
 }
+
 .cert-card:hover .back {
   transform: rotateY(360deg);
 }
+/* .contact{
+    width: 600px;
+    height: 400px;
+    margin-left: 300px;
+    margin-bottom: 20px;
+    background-color: #e8eaed;
+} */
 .c1{
     display: grid;
     grid-template-columns: 1fr;
@@ -455,8 +511,7 @@ a{
 .c1 textarea{
     width: 40%;
     margin-left: 200px;
-}
-#contact {
+}#contact {
   background: #f9f9f9;
   padding: 50px 20px;
   border-radius: 12px;
@@ -464,21 +519,25 @@ a{
   margin: 40px auto;
   box-shadow: 0 5px 15px rgba(0,0,0,0.1);
 }
+
 .contact-heading {
   text-align: center;
   font-size: 2rem;
   color: #014e7b;
   margin-bottom: 30px;
 }
+
 .contact-form .form-group {
   margin-bottom: 20px;
 }
+
 .contact-form label {
   display: block;
   margin-bottom: 8px;
   font-weight: bold;
   color: #333;
 }
+
 .contact-form input,
 .contact-form textarea {
   width: 100%;
@@ -487,12 +546,14 @@ a{
   border-radius: 8px;
   font-size: 1rem;
 }
+
 .contact-form input:focus,
 .contact-form textarea:focus {
   border-color: #007BFF;
   outline: none;
   box-shadow: 0 0 5px rgba(0,123,255,0.3);
 }
+
 .btn-submit {
   display: block;
   width: 100%;
@@ -505,23 +566,28 @@ a{
   cursor: pointer;
   transition: 0.3s;
 }
+
 .btn-submit:hover {
   background: #0056b3;
 }
+
 @keyframes pulse {
   0% { transform: scale(1); opacity: 0.8; }
   50% { transform: scale(1.3); opacity: 1; }
   100% { transform: scale(1); opacity: 0.8; }
 }
+
 @media (max-width:1440px) and (min-width:1024px){
     .nav .menu{
         padding-right: 20px;
     }
 }
 @media (min-width: 320px) and (max-width: 1024px) {
+    
     html, body {
         overflow-x: hidden;
     }
+
     .project1,
     .project2 {
         padding-top: 50px;
@@ -531,7 +597,13 @@ a{
         width: 100%;
         overflow-x: hidden;
     }
-    .image1 img,
+
+    .image1 img {
+        margin-left: -30px;
+        width: 100%;
+        height: auto;
+        display: block;
+    }
     .image2 img {
         margin-left: -30px;
         width: 100%;
@@ -544,6 +616,7 @@ a{
         padding-left: 20px;
         padding-right: 20px;
     }
+
     .content1 p,
     .content2 p {
         margin-top: 30px;
@@ -552,12 +625,13 @@ a{
         line-height: 20px;
         text-align: justify;
     }
+
     .btn {
       margin-right: -100px;
-      width: fit-content;
-      padding-left: 0;
-      display: flex;
-      justify-content: center;
+        width: fit-content;
+        padding-left: 0;
+        display: flex;
+        justify-content: center;
     }
     .btn button{
       font-size: 10px;
@@ -568,55 +642,64 @@ a{
         margin-top: 180px;
         text-align: center;
     }
+
     .displayskills div {
         margin-top: 30px;
         margin-left: 20px;
     }
+
     .line p,
     .line1 p {
         margin-left: 20px;
     }
+
+    /* Responsive image/text area */
     .h {
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
     }
+
     .h .data {
         padding: 20px;
     }
+
     .h img {
         width: 300px;
     }
+
     .h p {
         padding-right: 0px;
     }
+
     .oleo-script-regular {
         font-family: "Oleo Script", system-ui;
         font-weight: 100;
         font-style: normal;
     }
+
     .nav h1 {
         padding-left: 30px;
     }
+
     .hamburger {
         display: block;
         margin: 30px;
         font-size: 30px;
     }
+
     .nav .menu {
         display: none;
     }
+
     .sidebar {
         width: fit-content;
         display: block;
         height: 100%;
         padding-top: 60px;
-        right: -250px;
     }
-    .sidebar.active {
-        right: 0;
-    }
+
     .sidebar .a {
         padding: 15px 20px;
     }
